--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,15 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <a>Exam management</a>
+</div>
+
+<div class="container">
+    <div class="subheadings bg-white border-bottom box-shadow mb-3 jumbotron text-center">
+        <a href="/ExamSession/Index">Go to Exam Sessions</a>
+    </div>
+    <br />
+    <div class="bg-white border-bottom box-shadow mb-3 jumbotron text-center">
+        <a class="subheadings" href="/ExamSite/Index">Go to Exam Sites</a>
+    </div>
 </div>
