--- a/Views/ExamSite/Delete.cshtml
+++ b/Views/ExamSite/Delete.cshtml
@@ -1,39 +1,31 @@
 ﻿@using Exam_Management.Models.ViewModels;
-@model ExamSessionViewModel;
+@model ExamSiteViewModel;
 
 <h1>Confirm Delete (Permanent)</h1>
 
 <table class="table table-bordered table-responsive table-hover">
     <tr>
         <th>Id</th>
-        <th>Session Name</th>
-        <th>Description</th>
-        <th>Start Date</th>
-        <th>End Date</th>
-        <th>Exam Site</th>
-        <th>View / Edit</th>
+        <th>Code</th>
+        <th>Name</th>
     </tr>
 
     <tr>
-        @{ 
-            var start = Model.StartDate == null ? "Unset" : Model.StartDate.ToString();
-            var end = Model.EndDate == null ? "Unset" : Model.EndDate.ToString();
-        }
-
-        <td>Model.SessionId</td>
-        <td>@Model.SessionName</td>
-        <td>@Model.Description</td>
-        <td>@start</td>
-        <td>@end</td>
-        <td>@Model.ExamSite.Name</td>
+        <td>@Model.Id</td>
+        <td>@Model.Code</td>
+        <td>@Model.Name</td>
+        <td>@Model.</td>
     </tr>
+
 </table>
 
-<form method="post" asp-controller="ExamSession" asp-action="DeleteSession">
-    <input asp-for="SessionId" value="@Model.SessionId" alt="Id" type="hidden" />
+<form method="post" asp-controller="ExamSite" asp-action="DeleteSite">
+    <input asp-for="Id" value="@Model.Id" alt="Id" type="hidden" />
     <br />
-    <h4>Delete book? (Warning: permanent)</h4>
+    <h4>Delete</h4>
     <br />
-    <button type="submit">DELETE BOOK</button>
+    <button type="submit">DELETE</button>
 </form>
 
+<br />
+<a href="/ExamSite/Details/@Model.Id">Go back</a>
